# papermind

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  design-system.md  docker-compose.yml  errored-run.json  pyproject.toml  pyrightconfig.json
docs/superpowers/plans/: 2026-06-03-week4-agent-boilerplate.md
docs/superpowers/specs/: 2026-06-03-week4-agent-boilerplate-design.md
evals/: dataset.jsonl  eval_samples.jsonl  ragas_baseline.json  ragas_baseline_v2.json  ragas_final.json  run_ragas_eval.py  week4.md
scripts/: docker-entrypoint.sh  start_mcp_servers.sh
src/papermind/: app.py  config.py  exceptions.py
src/papermind/agent/: edges.py  graph.py  initial_state.py  runner.py  schemas.py  state.py
src/papermind/common/: embeddings.py  llm.py  schemas.py  types.py
src/papermind/evaluation/: __init__.py  cli.py  collect.py  ragas_compat.py  ragas_eval.py  schemas.py
src/papermind/ingestion/: chunker.py  parser.py  router.py  semantic_chunker.py  service.py
src/papermind/mcp/: client.py
src/papermind/mcp/store/: server.py
src/papermind/memory/: __init__.py  models.py  service.py
src/papermind/retrieval/: classifier.py  generator.py  pipeline.py  router.py
src/papermind/vectorstore/: __init__.py  client.py
src/papermind/web/: rate_limit.py  router.py
tests/evals/: test_briefing_quality.py
tests/integration/: test_agent_graph.py  test_query_pipeline.py
tests/unit/test_agent/: test_edges.py
tests/unit/test_ingestion/: test_chunker.py
tests/unit/test_retrieval/: test_classifier.py
tests/unit/test_vectorstore/: test_client.py
(+43 files in other folders)
