[project]
name = "papermind"
version = "0.1.0"
description = "RAG-powered document Q&A API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.18",
    "openai>=1.60.0",
    "pypdf>=5.1.0",
    "jinja2>=3.1.0",
    "llama-cloud>=2.7.0",
    "qdrant-client>=1.18.0",
    "langchain-experimental>=0.4.2",
    "langchain-openai>=1.2.2",
    "fastembed>=0.8.0",
    "langsmith>=0.3.0",
    "mcp[cli]>=1.27.2",
    "langgraph>=0.4.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain>=1.3.4",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "ragas>=0.4.3",
    "datasets>=5.0.0",
    "pandas>=3.0.3",
    "langchain-community>=0.4.2",
    "slowapi>=0.1.9",
]

[project.scripts]
papermind = "papermind.app:app"
papermind-mcp-papers = "papermind.mcp.papers.server:main"
papermind-mcp-store = "papermind.mcp.store.server:main"
papermind-agent = "papermind.agent.runner:main"
papermind-eval-ragas = "papermind.evaluation.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/papermind"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
